--- a/index.html
+++ b/index.html
@@ -1,73 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Player RAP Lookup</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h1>Player RAP Lookup</h1>
-    <form id="lookupForm">
-      <label for="playerId">Enter Player ID:</label>
-      <input type="text" id="playerId" name="playerId" placeholder="e.g. 286" required>
-      <button type="submit">Lookup</button>
-    </form>
-    <div id="result" class="result">
-      <!-- Results will appear here -->
-    </div>
-    <div id="error" class="error"></div>
-  </div>
+<script>
+document.getElementById('lookupForm').addEventListener('submit', async (e) => {
+  e.preventDefault();
+  const playerId = document.getElementById('playerId').value.trim();
+  const resultDiv = document.getElementById('result');
+  const errorDiv = document.getElementById('error');
+  resultDiv.innerHTML = '';
+  errorDiv.textContent = '';
 
-  <script>
-    document.getElementById('lookupForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const playerId = document.getElementById('playerId').value.trim();
-      const resultDiv = document.getElementById('result');
-      const errorDiv = document.getElementById('error');
-      resultDiv.innerHTML = '';
-      errorDiv.textContent = '';
+  if (!playerId) {
+    errorDiv.textContent = 'Please enter a player ID.';
+    return;
+  }
 
-      if (!playerId) {
-        errorDiv.textContent = 'Please enter a player ID.';
-        return;
-      }
+  // Use CORS proxy
+  const url = `https://api.allorigins.win/raw?url=` + encodeURIComponent(
+    `https://cartii.fit/apisite/inventory/v1/users/${playerId}/assets/collectibles?limit=5000`
+  );
 
-      // Adjust the URL if needed for dynamic player ID
-      const url = \`https://cartii.fit/apisite/inventory/v1/users/\${encodeURIComponent(playerId)}/assets/collectibles?limit=5000\`;
+  try {
+    const resp = await fetch(url);
+    const data = await resp.json();
 
-      try {
-        const resp = await fetch(url);
-        if (!resp.ok) {
-          throw new Error('Network response was not ok: ' + resp.statusText);
-        }
-        const data = await resp.json();
-        // Inspect `data` structure and adjust below:
-        // For example assume data.collectibles is array, each has a "rap" field
-        if (!data || !data.collectibles || data.collectibles.length === 0) {
-          resultDiv.innerHTML = '<p>No collectibles found for this player.</p>';
-          return;
-        }
+    // Real collectible array:
+    const items = data.data;
+    if (!items || items.length === 0) {
+      resultDiv.innerHTML = `<p>No collectibles found for this player.</p>`;
+      return;
+    }
 
-        // Example: compute total RAP (sum) or pick first
-        let totalRAP = 0;
-        data.collectibles.forEach(item => {
-          if (item.rap != null) {
-            totalRAP += Number(item.rap);
-          }
-        });
-
-        resultDiv.innerHTML = \`
-          <h2>Player ID: \${playerId}</h2>
-          <p>Total RAP: <strong>\${totalRAP}</strong></p>
-          <p>Number of collectibles: \${data.collectibles.length}</p>
-        \`;
-      } catch (err) {
-        console.error(err);
-        errorDiv.textContent = 'Error fetching data: ' + err.message;
+    // RAP is stored as recentAveragePrice
+    let totalRAP = 0;
+    items.forEach(item => {
+      if (item.recentAveragePrice != null) {
+        totalRAP += Number(item.recentAveragePrice);
       }
     });
-  </script>
-</body>
-</html>
+
+    resultDiv.innerHTML = `
+      <h2>Player ID: ${playerId}</h2>
+      <p>Total RAP: <strong>${totalRAP}</strong></p>
+      <p>Collectibles Count: ${items.length}</p>
+    `;
+
+  } catch (err) {
+    console.error(err);
+    errorDiv.textContent = 'Error fetching data: ' + err.message;
+  }
+});
+</script>
+
